--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
   display: inline-block;
   text-decoration: none; /* removes underline */
   color: white; /* no default browser blue */
-  background: linear-gradient(45deg, #667eea, #764ba2) /* solid purple button */
+  background-color: linear-gradient(45deg, #667eea, #764ba2) /* solid purple button */
   padding: 10px 20px;
   border-radius: 8px;
   font-family: sans-serif;
@@ -237,7 +237,7 @@
 }
 
 .link a:hover {
-  background: linear-gradient(45deg, #667eea, #764ba2) /* darker on hover */
+  background-color: linear-gradient(45deg, #667eea, #764ba2) /* darker on hover */
   transform: scale(1.05); /* slight zoom effect */
 }
 
